fixed a spacing issue

--- a/src/components/ContextualMenu/ContextualMenu.scss
+++ b/src/components/ContextualMenu/ContextualMenu.scss
@@ -76,6 +76,7 @@ a.ms-ContextualMenu-link {
 }
 .ms-ContextualMenu-linkContent {
   white-space: nowrap;
+  height: inherit;
 }
 
 .ms-ContextualMenu-divider {
